Multiple models, do not simplify by default

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "niivue-brainchop",
+  "name": "niivue-mesh",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@niivue/niivue": "^0.43.6",
+    "@niivue/niivue": "^0.44.1",
     "jslint": "^0.12.1"
   },
   "devDependencies": {
